--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 canvas {
-    background-color: #0a0a0a0a;
+    background-color: #0a0a0a;
     display: inline-block;
     width:90%;
     margin: 0 2%;
